--- a/Moubarak_Jamal_MDF2_Project1/Moubarak_Jamal_MDF2_Project1/Base.lproj/Main.storyboard
+++ b/Moubarak_Jamal_MDF2_Project1/Moubarak_Jamal_MDF2_Project1/Base.lproj/Main.storyboard
@@ -73,7 +73,6 @@
                                             <outlet property="post" destination="2jj-8w-d95" id="WHO-Ji-5fv"/>
                                             <outlet property="userIcon" destination="3Jp-Z0-6db" id="nhN-uU-tBv"/>
                                             <outlet property="userName" destination="Ha0-Vp-Otd" id="NOW-v9-dEI"/>
-                                            <segue destination="KAg-GL-ZOT" kind="modal" identifier="detail" id="0O6-oT-C7q"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -125,6 +124,7 @@
                     <tabBarItem key="tabBarItem" title="Home" image="first" id="u1e-5L-l1D"/>
                     <connections>
                         <outlet property="myTableView" destination="it9-Jz-bGb" id="8fD-tm-h68"/>
+                        <segue destination="KAg-GL-ZOT" kind="modal" identifier="detail" id="Ti1-dm-VHW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qh2-T1-AhA" sceneMemberID="firstResponder"/>
@@ -196,7 +196,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="description" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="Bbe-Qm-XZo">
-                                <rect key="frame" x="20" y="280" width="280" height="73"/>
+                                <rect key="frame" x="20" y="280" width="280" height="121"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
@@ -208,14 +208,14 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJo-i8-CnR">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJo-i8-CnR">
                                 <rect key="frame" x="68" y="251" width="42" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cqp-CT-UlA">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cqp-CT-UlA">
                                 <rect key="frame" x="212" y="251" width="42" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
